Fixed z-index

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ button {
   left: calc(50% - 200px);
   background-color: rgba(68, 68, 68, 0.95);
   border-radius: 10px;
+  z-index: 200;
 }
 
 .controls {
@@ -224,6 +225,7 @@ canvas {
 #app #snake-icon {
   animation: snakeMove 5s normal;
   font-size: 30px;
+  z-index: 100;
 }
 h1 {
   text-align: center
